# ActivityLove

./: .gitignore  .pylintrc  Kumadefile.py  MEMO  README-ja.ad  README.adoc  TODO  env.sh  pyproject.toml  routing.txt
.github/workflows/: pylint.yml
app/: main.py
app/db/wrapper/: base.py  json.py
app/info/: config.py  software.py  statistics.py
app/lib/: activityjson.py  dict2.py  split_id.py
app/server/: __init__.py
app/server/activitypub/: __init__.py  actor.py
app/server/misc/: __init__.py  hostmeta.py  manifest.py  nodeinfo.py  webfinger.py
backend/: autoroute.py  main.py
backend/api/: README
backend/api/v1/: __init__.py  login.py
backend/api/v1/endpoint/: login.py
backend/db/: setting.py
backend/db/model/: auth.py  user.py
backend/lib/: split_id.py
backend/lib/local/: find_profile.py  find_user.py
backend/route/.well-known/: host-meta.py  webfinger.py
backend/route/nodeinfo/: 2.1.py
backend/route/user/{id:str}/: actor.py
config/: example.toml
frontend/: package.json  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.html
migration/: 01_create_db.py  main.py
src/: autoroute.py  main.py
src/ActivityLove.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/db/: __init__.py  settiing.py  setting.py
src/db/model/: user.py
src/info/: config.py  software.py
src/lib/: activityjson.py  errorpage.py  nodeinfo.py
src/lib/local/: find_user.py
src/route/: __init__.py  manifest_json.py
src/route/.well-known/: webfinger.py
src/route/well-known/: nodeinfo.py
(+2 files in other folders)
